# huskey

./: Cargo.toml  README.md
.github/workflows/: build_gui.yml  library_test.yml
huskey-gui/: .gitignore  README.md  index.html  package-lock.json  package.json  test.json  tsconfig.json  vite.config.ts
huskey-gui/src/: App.vue  main.ts  styles.css  utilities.ts
huskey-gui/src-tauri/: Cargo.toml  tauri.conf.json
huskey-gui/src-tauri/src/: errors.rs  main.rs
huskey-gui/src/components/: AppNavbar.vue  CreateEntryButon.vue  DatabaseSelector.vue  EntryIcon.vue  FileSaver.vue  FileSelector.vue  InputIcon.vue  PasswordEdit.vue  PasswordEntriesTable.vue  PasswordEntry.vue  PasswordEntryInput.vue  PasswordEntryRow.vue  PasswordInput.vue  SaveDatabaseButton.vue
huskey-gui/src/routes/: CreateDatabase.vue  LandingScreen.vue  OpenDatabase.vue  OpenedDatabase.vue  PasswordEdit.vue
huskey-gui/src/store/: useDatabase.ts
huskey-gui/src/types/: huskeyTypes.ts
lib/: database.rs  encryption.rs  key.rs  lib.rs  tests.rs
