[package]
name = "huskey"
version = "0.0.1"
edition = "2021"
description="Rust password manager (uses AES-256-GCM + PBKDF2 + SHA-256)"
license="GPL-3.0-only"
authors=["Théo Fourniez"]

[lib]
name = "huskey_lib"
path = "lib/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = ">=0.10"
pbkdf2 = { version = ">=0.12", features = ["simple"] } # See the parallel feature ? https://docs.rs/crate/pbkdf2/latest/features
rand_core = { version = ">=0.6", features = ["std"] }
aes-gcm = ">=0.10"
serde_json = ">=1.0"
serde = { version = ">=1.0", features = ["derive"] }
rand = ">=0.8.5"
typenum = ">=1.16.0"
thiserror = "1.0"