[package]
name = "huskey-gui"
version = "0.0.1"
description = "The graphical user interface for the Huskey backend"
authors = ["Théo Fourniez"]
license = "GPL-3.0-only"
repository = "https://github.com/Theo-Fourniez/huskey/"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "window-set-title", "dialog-message", "path-all", "dialog-save", "dialog-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
huskey = { path = "../../" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
